Fix sidebar item alignment

--- a/SCSS/_sidebar.scss
+++ b/SCSS/_sidebar.scss
@@ -258,7 +258,7 @@
                                             }
                                         }
                                     // Sidebar list Arrow line Alignment
-                                        &:only-child {
+                                        &:only-of-type {
                                             margin-left: 24px;
                                         }
                                 }
